--- a/custom_components/grocy/manifest.json
+++ b/custom_components/grocy/manifest.json
@@ -12,7 +12,7 @@
   "iot_class": "local_polling",
   "issue_tracker": "https://github.com/custom-components/grocy/issues",
   "requirements": [
-    "pygrocy2 @ git+https://github.com/flipper/pygrocy2.git@dac05fcb11367a062f5f348f5d041e505de36880"
+    "pygrocy2==2.4.0"
   ],
   "version": "0.0.0"
 }
